; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_io.c_mrb_io_free.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_io.c_mrb_io_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_io = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @mrb_io_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mrb_io_free(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mrb_io*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.mrb_io*
  store %struct.mrb_io* %7, %struct.mrb_io** %5, align 8
  %8 = load %struct.mrb_io*, %struct.mrb_io** %5, align 8
  %9 = icmp ne %struct.mrb_io* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.mrb_io*, %struct.mrb_io** %5, align 8
  %13 = load i32, i32* @TRUE, align 4
  %14 = call i32 @fptr_finalize(i32* %11, %struct.mrb_io* %12, i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = load %struct.mrb_io*, %struct.mrb_io** %5, align 8
  %17 = call i32 @mrb_free(i32* %15, %struct.mrb_io* %16)
  br label %18

18:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @fptr_finalize(i32*, %struct.mrb_io*, i32) #1

declare dso_local i32 @mrb_free(i32*, %struct.mrb_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
